test/spec_vectors/simd_load_zero/fail/module_3.wat
(module (memory 0) (func $v128.load32_zero-arg-empty (result v128) (v128.load32_zero)))